[package]
name = "rainbow"
version = "0.1.1"
authors = ["Rowan Chase <rowan.chase@observant.net>"]
edition = "2022"
description = "A more colourful serial debug capture"

[dependencies]
serde = { version = "1.0.131", features = ["derive"] }
serialport = "4.0.1"
clap = { version = "3.0.0-rc.7", features = ["cargo", "derive"] }
anyhow = "1.0.45"
confy = "0.4.0"
colored = "2"
